[project]
name = "bvc5min"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "feedparser>=6.0.11",
    "python-vlc>=3.0.21203",
    "requests>=2.32.4",
    "ruff>=0.12.3",
    "sounddevice>=0.5.2",
    "textual>=4.0.0",
]
